# PoolCPP

./: README.md
Day 01/ex00/: Makefile  z.c
Day 01/ex01/: Makefile  main.c  menger.c  menger.h
Day 01/ex03/: pyramid.c
Day 01/ex04/: bitmap.h  drawing.h
Day 01/ex05/: ex05.h
Day 01/ex06/: Makefile  bitmap_header.c  drawing.c  drawing.h  main.c  menger.c
Day 02A/: delete_list.c  double_list.c  double_list_2.c  get_list_values.c  list_add.c  list_del_elem.c  list_get_elem.c  list_special.c
Day 03/: Makefile  assign_append.c  find.c  string.c  string.h  string_compare.c  string_join.c  string_split.c  test_main.c
Day 07M/: Admiral.cpp  Admiral.hpp  Borg.cpp  Borg.hpp  BorgQueen.cpp  BorgQueen.hpp  CMakeLists.txt  Federation.cpp  Federation.hpp  WarpSystem.cpp  WarpSystem.hpp
Day 09/: Character.cpp  Character.hpp  Mage.cpp  Mage.hpp  Paladin.cpp  Paladin.hpp  Priest.cpp  Priest.hpp  Warrior.cpp  Warrior.hpp  ex00.c  ex00.h  main.cpp
Day 14M/ex02/: Banana.hpp  CMakeLists.txt  Coconut.cpp  Coconut.hpp  Lemon.cpp  Lime.cpp  Lime.hpp  LittleHand.cpp  LittleHand.hpp
Rush 1/: array.c  char.c  container.h  ex06.c  float.c  int.c  list.c  list.h  new.c  point.c  vertex.c
Rush 2/: Box.cpp  Box.hpp  ConveyorBelt.cpp  ConveyorBelt.hpp  GiftPaper.cpp  GiftPaper.hpp  IConveyorBelt.hpp  IElf.hpp  ITable.hpp  LittlePony.cpp  LittlePony.hpp  Object.cpp  Object.hpp  PapaXmasElf.cpp  PapaXmasElf.hpp  PapaXmasTable.cpp  PapaXmasTable.hpp  TableRand.cpp  TableRand.hpp  Teddy.cpp  Teddy.hpp  Toy.cpp  Toy.hpp  Wrap.cpp  Wrap.hpp
Rush 3/: Makefile  README.md  main.cpp
(+227 files in other folders)
